--- a/config.json
+++ b/config.json
@@ -4,9 +4,12 @@
 	"token": "MTAzMzk5NjgyNjc1NzU3MDU5MQ.GItO5A.zh06RjYvPunvgidacVs1N5qMLAaUjiwYy9F-S8",
 	"welcomeChannel": "1028602109907701864",
 	"VerifyChannel": "1098586448346763304",
+	"whitelistChannel": "1029380467226595368",
 	"verifyMsgId": "1098588656605863987",
+	"whitelistMsgId": "1108227316703834132",
 	"RuleChannel": "1029380467226595368",
 	"emojiverify": "💠",
+	"emojiwhitelist": "🔗",
 	"verifyRoleone": "1092316996634431640",
 	"verifyRoletwo": "1029383924373274664",
 	"BotRoleId": "1029384052958040114"
