--- a/config.json
+++ b/config.json
@@ -12,5 +12,6 @@
 	"emojiwhitelist": "🔗",
 	"verifyRoleone": "1092316996634431640",
 	"verifyRoletwo": "1029383924373274664",
-	"BotRoleId": "1029384052958040114"
+	"BotRoleId": "1029384052958040114",
+	"whitelistlogchannel": "1108236667485175868"
 }
