--- a/config.json
+++ b/config.json
@@ -13,5 +13,6 @@
 	"verifyRoleone": "1092316996634431640",
 	"verifyRoletwo": "1029383924373274664",
 	"BotRoleId": "1029384052958040114",
-	"whitelistlogchannel": "1108236667485175868"
+	"whitelistlogchannel": "1108236667485175868",
+	"logchannel": "1099585717958619208"
 }
