--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"clientId": "1033996826757570591",
 	"guildId": "1028602109907701861",
-	"token": ":)",
+	"token": "MTAzMzk5NjgyNjc1NzU3MDU5MQ.GkAu17.62Yi00MeqdsTGbXCRp9pmzpISnyuGsMWB0Dqlw",
 	"welcomeChannel": "1028602109907701864",
 	"VerifyChannel": "1098586448346763304",
 	"whitelistChannel": "1029380467226595368",
