--- a/config.json
+++ b/config.json
@@ -20,5 +20,7 @@
 
 	"verifyRoleone": "your id or token",
 	"verifyRoletwo": "your id or token",
-	"BotRoleId": "your id or token"
+	"BotRoleId": "your id or token",
+
+	"enjoy :)": "yeaaaaaaaaaaaaaaaaaaaaaa"
 }
