--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
 	"token": "MTAzMzk5NjgyNjc1NzU3MDU5MQ.GkAu17.62Yi00MeqdsTGbXCRp9pmzpISnyuGsMWB0Dqlw",
 	"welcomeChannel": "1028602109907701864",
 	"VerifyChannel": "1098586448346763304",
+	"VerifylogChannel": "1083735142268424202",
 	"whitelistChannel": "1029380467226595368",
 	"verifyMsgId": "1098588656605863987",
 	"whitelistMsgId": "1108227316703834132",
