--- a/config.json
+++ b/config.json
@@ -18,6 +18,19 @@
 	"logchannel": "1099585717958619208",
 	"test": "owo",
 
+	"chatgptapi": "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",
 
-	"chatgptapi": "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"
+	"RoleLinkChannel": "1092446938630193273",
+	"RoleLinkMsgId": "1092446978484490330",
+	"r1": "1051130659311202305",
+	"r2": "1068565915177857166",
+	"r3": "1092350002313052170",
+	"r4": "1092350574109937725",
+	"r5": "1092349120527736852",
+	"r1e": "📢",
+	"r2e": "🆕",
+	"r3e": "🎁",
+	"r4e": "🔨",
+	"r5e": "💡"
+	
 }
