--- a/config.json
+++ b/config.json
@@ -31,7 +31,9 @@
 	"r2e": "🆕",
 	"r3e": "🎁",
 	"r4e": "🔨",
-	"r5e": "💡"
+	"r5e": "💡",
 	
-	"notifyId":"968013433482141696" 
+	"notifyId":"968013433482141696" ,
+	"DebugMode": false
+	
 }
